# clipping_polygons

./: CMakeLists.txt  main.cpp  test.cpp
